fix: Kod tabaninin adresi guncellendi.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <h3>Sonraki Aşamalar</h3>
                         
                         <div class="post-steps__item">
-                            <h4>⚖️ İş Mahkemelerinde Dava Yolu</h4>
+                            <h4>İş Mahkemelerinde Dava Yolu</h4>
                             <p>
                                 Yukarıdaki adımlardan sonuç alınamazsa, <strong>7036 sayılı İş Mahkemeleri Kanunu</strong> çerçevesinde 
                                 iş mahkemelerinde dava açılması yolu önerilmektedir.
@@ -211,7 +211,7 @@
                         </div>
 
                         <div class="post-steps__item">
-                            <h4>📄 Genç Girişimci İstisnası Belgesi</h4>
+                            <h4>Genç Girişimci İstisnası Belgesi</h4>
                             <p>
                                 Bu belge kritik öneme sahiptir. <a href="https://dijital.gib.gov.tr" target="_blank" rel="noopener noreferrer">dijital.gib.gov.tr</a> 
                                 üzerinden <strong>e-Tebligat</strong> bölümüne girerek belgeye erişebilirsiniz.
@@ -331,8 +331,8 @@
                 </button>
             </div>
             <p class="modal__privacy-notice">
-                🔒 Tüm işlemler tarayıcınızda gerçekleşir. Verileriniz hiçbir şekilde sunucuya gönderilmez veya saklanmaz.
-                <a href="https://github.com/DevBD1/PrimDestegiSitesi" target="_blank" rel="noopener noreferrer">Kaynak kodunu inceleyerek bunu doğrulayabilirsiniz.</a>
+                Tüm işlemler tarayıcınızda gerçekleşir. Verileriniz hiçbir şekilde sunucuya gönderilmez veya saklanmaz.
+                <a href="https://github.com/DevBD1/GencGirisimciler" target="_blank" rel="noopener noreferrer">Kaynak kodunu inceleyerek bunu doğrulayabilirsiniz.</a>
             </p>
             <div class="modal__body">
                 <form id="petitionForm" class="petition-form">
@@ -470,8 +470,8 @@
                     Somut durumunuz için mutlaka bir avukata danışın.
                 </p>
                 <p class="footer__privacy">
-                    🔒 Tüm işlemler tarayıcınızda gerçekleşir. Verileriniz hiçbir şekilde sunucuya gönderilmez veya saklanmaz.
-                    <a href="https://github.com/DevBD1/PrimDestegiSitesi" target="_blank" rel="noopener noreferrer">Kaynak kodunu inceleyerek bunu doğrulayabilirsiniz.</a>
+                    Tüm işlemler tarayıcınızda gerçekleşir. Verileriniz hiçbir şekilde sunucuya gönderilmez veya saklanmaz.
+                    <a href="https://github.com/DevBD1/GencGirisimciler" target="_blank" rel="noopener noreferrer">Kaynak kodunu inceleyerek bunu doğrulayabilirsiniz.</a>
                 </p>
                 <p class="footer__info">
                     © 2026 — Mağdur vatandaşlar için hazırlanmış sivil bilgilendirme kaynağı
